@startuml

' 클래스 및 인터페이스 정의

class BookRecord {
  +id: string
  +name: string
  +size: number
  +metadata: PackagingMetadataObject
  +createdAt: number
  +updatedAt: number | undefined
  +cfi: string | undefined
  +percentage: number | undefined
  +definitions: string[]
  +annotations: Annotation[]
  +configuration: { typography: TypographyConfiguration | undefined } | undefined
}

class FileRecord {
  +id: string
  +file: File
}

class CoverRecord {
  +id: string
  +cover: string | null
}




' DB 클래스 정의
class DB {
  +files: Table<FileRecord>
  +covers: Table<CoverRecord>
  +books: Table<BookRecord>
}



' 관계 정의
DB -- FileRecord 
DB -- CoverRecord 
DB -- BookRecord 



FileRecord <->BookRecord :reference
BookRecord <->CoverRecord :reference


@enduml